--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "babel-preset-react-native-stage-0": "^1.0.1",
     "babel-root-import": "^4.1.8",
     "jest": "19.0.2",
-    "react-test-renderer": "~15.4.1"
+    "react-test-renderer": "~15.4.1",
+    "remote-redux-devtools": "^0.5.7"
   },
   "jest": {
     "preset": "react-native"
